commit made by prince

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -349,8 +349,8 @@ img {
 .skills__java{
   width:90%;
 }
-.skils__python{
-  width:90%;
+.skills__python{
+  width: 90%;
 }
 .skills__cpp{
   width: 85%;
