--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -397,7 +397,16 @@ img {
 .work__img img:hover {
   transform: scale(1.1);
 }
-
+/*===== CERTIFICATES=====*/
+.certificate{
+  border-style: solid;
+  border-radius: 10px;
+  border-color: white;
+  margin-left:40px;
+  margin-right:40px;
+  background-color:lightblue;
+  color:blue;
+}
 /* ===== CONTACT =====*/
 .contact__input {
   width: 100%;
