--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -406,6 +406,7 @@ img {
   margin-right:40px;
   background-color:lightblue;
   color:blue;
+  box-shadow: 20px 20px 20px #0250f82e;
 }
 /* ===== CONTACT =====*/
 .contact__input {
